fix header z-index

--- a/css/main.css
+++ b/css/main.css
@@ -283,7 +283,7 @@ footer {
   left: 3vw;
   top: 3vh;
   background-color: #353638;
-  z-index: 2;
+  z-index: 5;
   -webkit-transform: translateY(-200%);
   -ms-transform: translateY(-200%);
   transform: translateY(-200%);
